--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 postgres:
-  url: postgresql://postgres:postgres@psql:5432/tasks
+  url: postgresql://postgres:postgres@localhost:5432/tasks
 
 http:
   port: 9000
